# tusee-api

./: .gitignore  .pylintrc  Cargo.toml  Pipfile  README.md  migration.json  migration_script.py  run.py  tusee.conf  url_map.md
app/: __init__.py
app/authentication/: __init__.py  models.py  routes.py
app/board/: __init__.py  routes.py
app/db/: column.py  db.py  db_connection.py  filters.py  model.py
app/event/: __init__.py  routes.py
app/exceptions/: __init__.py
app/goal/: __init__.py  routes.py
app/note/: __init__.py  routes.py
app/settings/: __init__.py  routes.py
app/statistics/: __init__.py  routes.py
app/task/: __init__.py  models.py  routes.py
app/utils/: audit_log_tasks.py  board_tasks.py  calendar_tasks.py  event_tasks.py  goal_tasks.py  key_tasks.py  note_tasks.py  settings_tasks.py  statistics_tasks.py  task_tasks.py  user_tasks.py
config/: development.py
docs/: 0002-keeping-data-safe.md
migrations/2021-12-20-155444_create_users/: down.sql  up.sql
migrations/2021-12-20-161950_create_settings/: down.sql  up.sql
migrations/2021-12-26-110324_create_boards/: down.sql  up.sql
migrations/2021-12-26-110345_create_permissions_audit_log/: down.sql  up.sql
migrations/2021-12-26-110353_create_access_audit_log/: down.sql  up.sql
migrations/2021-12-26-110422_create_tasks/: down.sql  up.sql
migrations/2021-12-26-110647_create_encrypted_keys/: down.sql  up.sql
migrations/2021-12-26-111550_create_available_user_boards/: down.sql  up.sql
migrations/2021-12-26-112837_create_scheduled_blocks/: down.sql  up.sql
migrations/de-setup/: 2022-03-23-6-132200_drop_all.sql
migrations/setup/: 2021-12-20-155444_create_users.sql  2021-12-20-161950_create_settings.sql  2021-12-26-110324_create_boards.sql  2021-12-26-110345_create_permissions_audit_log.sql  2021-12-26-110353_create_access_audit_log.sql  2021-12-26-110422_create_tasks.sql  2021-12-26-110647_create_encrypted_keys.sql  2021-12-26-112837_create_scheduled_blocks.sql  2022-04-03-151600_create_events_table.sql  2022-04-17-094900_add_task_status_column.sql  2022-04-17-102000_change_task_board_constraint.sql  2022-04-20-172200_change_board_columns.sql  2022-04-28-155001_add_task_column.sql  2022-08-07-162000_tasks_add_active_column.sql  2022-08-30-184100_create_notes_table.sql  2022-09-04-134000_create_goals_table.sql  2022-09-04-134000_create_statistics_table.sql.sql  2022-09-04-134000_modify_events_table.sql
src/: home.rs  main.rs  schema.rs
src/auth/: forms.rs  mod.rs  token.rs
src/errors/: mod.rs  user_management_errors.rs
(+24 files in other folders)
