[package]
name = "tusee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jsonwebtoken = "7" # This should get updated soon-ish, it's cause for failing security audit
serde = {version = "1.0", features = ["derive"] }
lettre = "0.10.0-rc.4"
postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = ["derive"] }
actix-cors = "0.5.4"
envy = "0.4.2"
bcrypt = "0.10.1"
serde_json = "1.0.78"
aes-gcm = "0.9.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }
validator = { version = "0.14", features = ["derive"] }