[package]
name = "tusee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
josekit = "0.7.4"
serde = {version = "1.0", features = ["derive"] }
lettre = "0.10.0-rc.4"
postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = ["derive"] }
actix-cors = "0.5.4"
envy = "0.4.2"
argon2 = "0.3.2"
rand_core = { version = "0.6", features = ["std"] }
serde_json = "1.0.78"
aes-gcm = "0.9.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
handlebars = { version = "4.2.1", features = ["dir_source"] }
validator = { version = "0.14", features = ["derive"] }
justconfig = "1.0"
otpauth = "0.3"
qrcode = "0.12"
image = { version = "~0.23.14", optional = true}
base64 = { version = "~0.13", optional = true }