[package]
name = "tusee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
josekit = "0.8.0"
serde = {version = "1.0", features = ["derive"] }
lettre = "0.10.0-rc.4"
postgres = "0.19.1"
postgres-types = { version = "~0.2", features = ["derive"] }
actix-cors = "~0.6"
envy = "0.4.2"
argon2 = "0.3.4"
rand_core = { version = "0.6", features = ["std"] }
serde_json = "1.0.79"
aes-gcm = "0.9.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
handlebars = { version = "4.2.1", features = ["dir_source"] }
validator = { version = "0.14", features = ["derive"] }
justconfig = "1.0"
totp-rs = { version = "~0.7", features = ["qr"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
custom_error = "1.9.2"
rand = "0.8.5"